@@ -1,29 +1,29 @@
-package minn.music.commands;
+package minn.music.commands.code;
 
 import minn.music.MusicBot;
+import minn.music.commands.GenericCommand;
 import net.dv8tion.jda.utils.SimpleLog;
 
-import java.io.*;
 import java.util.Scanner;
 import java.util.concurrent.TimeUnit;
 
-public class PythonEval extends EvalCommand
+public class CmdCommand extends EvalCommand
 {
-	private File f = new File("PewDie.py");
-	private final static SimpleLog LOG = SimpleLog.getLog("PythonEval");
+	private final static SimpleLog LOG = SimpleLog.getLog("CmdCommand");
 
-	public PythonEval(MusicBot bot) throws IOException
+	public CmdCommand(MusicBot bot)
 	{
 		super(bot);
-		LOG.setLevel(SimpleLog.Level.DEBUG);
 	}
 
+	@Override
 	public String getAlias()
 	{
-		return "py";
+		return "cmd";
 	}
 
-	public void invoke(CommandEvent event)
+	@Override
+	public void invoke(GenericCommand.CommandEvent event)
 	{
 		if (!event.author.getId().equals(MusicBot.config.owner))
 		{
@@ -32,17 +32,19 @@ public class PythonEval extends EvalCommand
 		}
 		try
 		{
-			// Create Python file
-			f.createNewFile();
-			f.deleteOnExit();
-			OutputStream stream = new BufferedOutputStream(new FileOutputStream(f));
-			stream.write(event.allArgs.getBytes());
-			stream.close();
-
 			// Start process
-			ProcessBuilder builder = new ProcessBuilder();
-			builder.command("python", f.getName());
-			Process p = builder.start();
+			Process p;
+			if (isWin())
+				p = Runtime.getRuntime().exec("cmd /c " + event.allArgs);
+			else if (isUnix())
+				p = Runtime.getRuntime().exec(event.allArgs);
+			else if (isMac())
+				p = Runtime.getRuntime().exec("sh " + event.allArgs);
+			else
+			{
+				LOG.fatal("OS is not registered to use this command. Contact Minn about your OS.");
+				return;
+			}
 
 			// Create Stream Scanner
 			Scanner sc = new Scanner(p.getInputStream());
@@ -67,12 +69,12 @@ public class PythonEval extends EvalCommand
 						event.send("ERROR: " + read(scErr));
 				} else
 					event.send("✅");
-			}, "PythonEval-Read");
+			}, "CmdEval-Read");
 			t.start();
 
 			// Destroy Process
 			if (p.waitFor(1, TimeUnit.MINUTES))
-				p.destroy();
+				p.destroyForcibly();
 			else
 			{
 				p.destroyForcibly();
@@ -85,6 +87,24 @@ public class PythonEval extends EvalCommand
 			event.send("Something went wrong trying to eval your query.");
 			LOG.log(e);
 		}
+	}
+
+	private static boolean isWin()
+	{
+		String os = System.getProperty("os.name").toLowerCase();
+		return (os.contains("win"));
+	}
+
+	private static boolean isUnix()
+	{
+		String os = System.getProperty("os.name").toLowerCase();
+		return (os.contains("nix") || os.contains("nux") || os.indexOf("aix") > 0);
+	}
+
+	private static boolean isMac()
+	{
+		String os = System.getProperty("os.name").toLowerCase();
+		return (os.contains("mac"));
 	}
 
 }
